tests/org.eclipse.php.core.tests/workspace/errors/php7/invalidConstantExpression2.pdtt
--TEST--
Test unfinished method declaration error reporting
--FILE--
<?php
class Foo {
    const BAR = $test::T;
}
?>
--EXPECT--
[line=3, start=34, end=39] Dynamic class names are not allowed in compile-time class constant references